# simple-database

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
includes/: columns.h  data_types.h  parser.h  table.h  tokenizer.h
includes/fsms/: create_state_machine.h  expr_state_machine.h  insert_state_machine.h  join_state_machine.h  select_state_machine.h  state_machine.h  update_state_machine.h
includes/operators/: create_operator.h  filter_operator.h  insert_operator.h  join_operator.h  operator.h  project_operator.h  read_operator.h  set_operator.h  update_operator.h  write_operator.h
src/: CMakeLists.txt  data_types.cpp  parser.cpp  tokenizer.cpp
src/fsms/: create_state_machine.cpp  expr_state_machine.cpp  insert_state_machine.cpp  join_state_machine.cpp  select_state_machine.cpp  update_state_machine.cpp
src/operators/: filter_operator.cpp  insert_operator.cpp  join_operator.cpp  operator.cpp  project_operator.cpp  read_operator.cpp  update_operator.cpp  write_operator.cpp
test/: CMakeLists.txt  operator_test.cpp  parser_test.cpp
